fix: spectrogram collapsing into zero width element
Fixes: #90
Fixes: #78

--- a/src/components/media-controls/css/style.css
+++ b/src/components/media-controls/css/style.css
@@ -1,3 +1,8 @@
+:host {
+  position: relative;
+  display: inline-block;
+}
+
 sl-menu-item[checked]::part(base) {
   background-color: var(--oe-selected-color);
   color: var(--oe-font-color);
